--- a/css/assignment2.css
+++ b/css/assignment2.css
@@ -1,20 +1,32 @@
 /*assignment2*/
 
-.body{
-    background-color: grey;
-    background-position: center, center;
-    background-size: auto;
-    margin-right: auto;
+.container{
     margin-left: auto;
-    margin-top: 150px;
+    margin-right: auto;
+    display: flex inline-block;
+    flex-direction: column;
     text-align: center;
-    color: white;
+    color: black;
     padding-top: 20px;
     padding-bottom: 10px;
+    align-items: center;
+    display: flex;
 }
-.button{
-    padding: 20px;
-}
+
 h1{
     text-align: center;
+    margin-bottom: 100px;
 }
+img{
+    width: 200px;
+    height: 200px;
+    justify-content: center;
+}
+.display{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    margin-bottom: 30px;
+}
+
+
